# anyid

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-04-11-refactor-codec-design.md
src/anyid/: __init__.py  id.py  serialize.py
src/imstr/: __init__.py  codec.py
tests/: test_codec.py  test_id.py  test_serialize.py
