[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anyid"
version = "0.1.0"
description = "Fast, unique, and serializable IDs for NumPy arrays"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "pillow",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/anyid"]
